--- a/{{cookiecutter.project_name}}/00_AMLConfiguration.ipynb
+++ b/{{cookiecutter.project_name}}/00_AMLConfiguration.ipynb
@@ -27,7 +27,9 @@
     "from azureml.core import Workspace\n",
     "from dotenv import set_key, get_key, find_dotenv\n",
     "from pathlib import Path\n",
-    "from utilities import get_auth"
+    "from utilities import get_auth\n",
+    "from MetricsUtils.hpStatisticsCollection import statisticsCollector, CollectionEntry\n",
+    "from MetricsUtils.storageutils import storageConnection"
    ]
   },
   {
@@ -109,7 +111,8 @@
     "\n",
     "tenant_id = \"YOUR_TENANT_ID\" # Optional for service principal authentication\n",
     "username = \"YOUR_SERVICE_PRINCIPAL_APPLICATION_ID\" # Optional for service principal authentication\n",
-    "password = \"YOUR_SERVICE_PRINCIPAL_PASSWORD\" # Optional for service principal authentication"
+    "password = \"YOUR_SERVICE_PRINCIPAL_PASSWORD\" # Optional for service principal authentication\n",
+    "storageConnString = \"YOUR_STORAGE_CONNECTION_STRING\""
    ]
   },
   {
@@ -169,6 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "statisticsCollector.startTask(CollectionEntry.AML_WORKSPACE_CREATION)\n",
     "ws = Workspace.create(\n",
     "    name=workspace_name,\n",
     "    subscription_id=subscription_id,\n",
@@ -177,7 +181,29 @@
     "    create_resource_group=True,\n",
     "    auth=get_auth(env_path),\n",
     "    exist_ok=True,\n",
-    ")"
+    ")\n",
+    "statisticsCollector.endTask(CollectionEntry.AML_WORKSPACE_CREATION)\n",
+    "print(statisticsCollector.getEntry(CollectionEntry.AML_WORKSPACE_CREATION))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get a connection string to the workspace's storage to use to save the statistics."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if storageConnString == \"YOUR_STORAGE_CONNECTION_STRING\":\n",
+    "    stgAcctName = ws.get_details()['storageAccount'].split('/')[-1]\n",
+    "    storageConnString = storageConnection.getConnectionStringWithAzCredentials(resource_group, stgAcctName)\n",
+    "set_key(env_path, \"storage_conn_string\", storageConnString)\n",
+    "print(\"storage_conn_string: {}\".format(storageConnString))"
    ]
   },
   {
@@ -210,6 +236,22 @@
    "outputs": [],
    "source": [
     "ws.write_config()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the statistics collected so far."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "statisticsCollector.uploadContent(storageConnString)"
    ]
   },
   {
