--- a/{{cookiecutter.project_name}}/04_CreateImage.ipynb
+++ b/{{cookiecutter.project_name}}/04_CreateImage.ipynb
@@ -118,7 +118,10 @@
     "import logging\n",
     "import timeit as t\n",
     "from azureml.core.model import Model\n",
+    "from azureml.contrib.services.aml_request import rawhttp\n",
+    "\n",
     "sys.path.append('./scripts/')\n",
+    "\n",
     "\n",
     "def init():\n",
     "    logger = logging.getLogger(\"scoring_script\")\n",
@@ -132,15 +135,38 @@
     "    loadTimeMsg = \"Model loading time: {0} ms\".format(round((end-start)*1000, 2))\n",
     "    logger.info(loadTimeMsg)\n",
     "\n",
-    "def run(body):\n",
-    "    logger = logging.getLogger(\"scoring_script\")\n",
-    "    json_load_text = json.loads(body)\n",
-    "    text_to_score = json_load_text['input']\n",
-    "    start = t.default_timer()\n",
-    "    resp = model.score(text_to_score) \n",
-    "    end = t.default_timer()\n",
-    "    logger.info(\"Prediction took {0} ms\".format(round((end-start)*1000, 2)))\n",
-    "    return(json.dumps(resp))"
+    "@rawhttp\n",
+    "def run(request):\n",
+    "    \"\"\"\n",
+    "    Function runs on each request\n",
+    "    \"\"\"\n",
+    "    body = request.data\n",
+    "    if request.method == 'POST':\n",
+    "        logger = logging.getLogger(\"scoring_script\")\n",
+    "        json_load_text = json.loads(body)\n",
+    "        text_to_score = json_load_text['input']\n",
+    "        start = t.default_timer()\n",
+    "        resp = model.score(text_to_score) \n",
+    "        end = t.default_timer()\n",
+    "        logger.info(\"Prediction took {0} ms\".format(round((end-start)*1000, 2)))\n",
+    "        return(json.dumps(resp))\n",
+    "    if request.method == 'GET':\n",
+    "        resp_body = {\n",
+    "            \"azEnvironment\": \"Azure\",\n",
+    "            \"location\": \"westus2\",\n",
+    "            \"osType\": \"Ubuntu 16.04\",\n",
+    "            \"resourceGroupName\": \"\",\n",
+    "            \"resourceId\": \"\",\n",
+    "            \"sku\": \"\",\n",
+    "            \"subscriptionId\": \"\",\n",
+    "            \"uniqueId\": \"PythonMLRST\",\n",
+    "            \"vmSize\": \"\",\n",
+    "            \"zone\": \"\",\n",
+    "            \"isServer\": False,\n",
+    "            \"version\": \"\"\n",
+    "        }\n",
+    "        return(resp_body)\n",
+    "    return AMLResponse(\"bad request\", 500)"
    ]
   },
   {
@@ -157,7 +183,7 @@
    "outputs": [],
    "source": [
     "conda_pack = [\"scikit-learn==0.19.1\", \"pandas==0.23.3\"]\n",
-    "requirements = [\"lightgbm==2.1.2\", \"azureml-defaults==1.0.57\"]"
+    "requirements = [\"lightgbm==2.1.2\", \"azureml-defaults==1.0.57\", \"azureml-contrib-services\"]"
    ]
   },
   {
@@ -308,7 +334,6 @@
     "name": "raymondl"
    }
   ],
-  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python [conda env:MLAKSDeployAML]",
    "language": "python",
