--- a/{{cookiecutter.project_name}}/03_DevelopScoringScript.ipynb
+++ b/{{cookiecutter.project_name}}/03_DevelopScoringScript.ipynb
@@ -151,7 +151,7 @@
     "    resp = model.score(text_to_score)\n",
     "    end = t.default_timer()\n",
     "    logger.info(\"Prediction took {0} ms\".format(round((end-start)*1000, 2)))\n",
-    "    return json.dumps(resp)\n"
+    "    return json.dumps(resp)"
    ]
   },
   {
