--- a/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
+++ b/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
@@ -38,7 +38,8 @@
     "from azureml.core.webservice import Webservice, AksWebservice\n",
     "from azureml.core.workspace import Workspace\n",
     "from dotenv import set_key, get_key, find_dotenv\n",
-    "from utilities import text_to_json, get_auth\n"
+    "from utilities import text_to_json, get_auth\n",
+    "from MetricsUtils.hpStatisticsCollection import statisticsCollector, CollectionEntry\n"
    ]
   },
   {
@@ -117,6 +118,23 @@
    "outputs": [],
    "source": [
     "image = ws.images[image_name]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Restore the statistics data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "storageConnString = get_key(env_path, \"storage_conn_string\")\n",
+    "statisticsCollector.hydrateFromStorage(storageConnString)"
    ]
   },
   {
@@ -204,9 +222,12 @@
     ")\n",
     "\n",
     "# Create the cluster\n",
+    "statisticsCollector.startTask(CollectionEntry.AML_COMPUTE_CREATION)\n",
     "aks_target = ComputeTarget.create(\n",
     "    workspace=ws, name=aks_name, provisioning_configuration=prov_config\n",
-    ")"
+    ")\n",
+    "statisticsCollector.endTask(CollectionEntry.AML_COMPUTE_CREATION)\n",
+    "print(statisticsCollector.getEntry(CollectionEntry.AML_COMPUTE_CREATION))"
    ]
   },
   {
@@ -394,6 +415,23 @@
    "source": [
     "scoring_url = aks_service.scoring_uri\n",
     "api_key = aks_service.get_keys()[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write the URI and key to the statistics tracker."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "statisticsCollector.addEntry(CollectionEntry.AKS_REALTIME_ENDPOINT, scoring_url)\n",
+    "statisticsCollector.addEntry(CollectionEntry.AKS_REALTIME_KEY, api_key)"
    ]
   },
   {
@@ -610,7 +648,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!kubectl scale --current-replicas=$num_replicas --replicas=$new_num_replicas {\"deployment/\" + aks_service_name}"
+    "!kubectl get namespaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl scale --current-replicas=$num_replicas --replicas=$new_num_replicas {\"deployments/\" + aks_service_name} --namespace azureml-workspace"
    ]
   },
   {
@@ -635,6 +682,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Save the statistics collected so far."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "statisticsCollector.uploadContent(storageConnString)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Next, we will test the [throughput of the web service](06_SpeedTestWebApp.ipynb)."
    ]
   }
@@ -647,7 +710,7 @@
   ],
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -661,7 +724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
