--- a/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
+++ b/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
@@ -38,7 +38,7 @@
     "from azureml.core.webservice import Webservice, AksWebservice\n",
     "from azureml.core.workspace import Workspace\n",
     "from dotenv import set_key, get_key, find_dotenv\n",
-    "from utilities import text_to_json, get_auth\n",
+    "from AIHelpers.utilities import text_to_json, get_auth\n",
     "from MetricsUtils.hpStatisticsCollection import statisticsCollector, CollectionEntry\n"
    ]
   },
