--- a/{{cookiecutter.project_name}}/02_TrainOnLocal.ipynb
+++ b/{{cookiecutter.project_name}}/02_TrainOnLocal.ipynb
@@ -338,7 +338,7 @@
    "outputs": [],
    "source": [
     "# Specify conda dependencies with scikit-learn and pandas\n",
-    "conda_pack = [\"scikit-learn==0.19.1\", \"pandas==0.23.3\"]\n",
+    "conda_pack = [\"pip=19.3.1\",\"scikit-learn==0.19.1\", \"pandas==0.23.3\"]\n",
     "requirements = [\"lightgbm==2.1.2\", \"azureml-defaults==1.0.57\"]"
    ]
   },
