--- a/notebooks/00_AMLConfiguration_Old.ipynb
+++ b/notebooks/00_AMLConfiguration_Old.ipynb
@@ -24,10 +24,10 @@
    "outputs": [],
    "source": [
     "import azureml.core\n",
+    "from azure_utils.utilities import get_auth\n",
     "from azureml.core import Workspace\n",
     "from dotenv import set_key, get_key, find_dotenv\n",
     "from pathlib import Path\n",
-    "from utilities import get_auth\n",
     "from MetricsUtils.hpStatisticsCollection import statisticsCollector, CollectionEntry\n",
     "from MetricsUtils.storageutils import storageConnection"
    ]
@@ -280,6 +280,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.2"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
