--- a/notebooks/03_DevelopScoringScript.ipynb
+++ b/notebooks/03_DevelopScoringScript.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "import sys\n",
     "import pandas as pd\n",
-    "from utilities import text_to_json, get_auth\n",
+    "from azure_utils.utilities import text_to_json, get_auth\n",
     "import logging\n",
     "from dotenv import set_key, get_key, find_dotenv\n",
     "from azureml.core.workspace import Workspace\n",
@@ -257,6 +257,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.2"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
