--- a/notebooks/04_CreateImage.ipynb
+++ b/notebooks/04_CreateImage.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from utilities import text_to_json, get_auth\n",
+    "from azure_utils.utilities import text_to_json, get_auth\n",
     "from azureml.core.model import Model\n",
     "from azureml.core.workspace import Workspace\n",
     "from azureml.core.conda_dependencies import CondaDependencies\n",
@@ -350,6 +350,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.2"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
