--- a/notebooks/05_DeployOnAKS.ipynb
+++ b/notebooks/05_DeployOnAKS.ipynb
@@ -38,7 +38,7 @@
     "from azureml.core.webservice import Webservice, AksWebservice\n",
     "from azureml.core.workspace import Workspace\n",
     "from dotenv import set_key, get_key, find_dotenv\n",
-    "from AIHelpers.utilities import text_to_json, get_auth\n",
+    "from azure_utils.utilities import text_to_json, get_auth\n",
     "from MetricsUtils.hpStatisticsCollection import statisticsCollector, CollectionEntry\n"
    ]
   },
@@ -725,6 +725,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.5"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
