--- a/notebooks/01_DataPrep.ipynb
+++ b/notebooks/01_DataPrep.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "from utilities import read_csv_gz, clean_text, round_sample_strat, random_merge"
+    "from azure_utils.utilities import read_csv_gz, clean_text, round_sample_strat, random_merge"
    ]
   },
   {
@@ -700,6 +700,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.2"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
