--- a/notebooks/02_TrainOnLocal.ipynb
+++ b/notebooks/02_TrainOnLocal.ipynb
@@ -35,7 +35,7 @@
     "from azureml.core import ScriptRunConfig\n",
     "from azureml.core.conda_dependencies import CondaDependencies\n",
     "from dotenv import set_key, get_key, find_dotenv\n",
-    "from utilities import get_auth"
+    "from azure_utils.utilities import get_auth"
    ]
   },
   {
@@ -642,6 +642,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.2"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
