--- a/notebooks/03_DevelopScoringScript.ipynb
+++ b/notebooks/03_DevelopScoringScript.ipynb
@@ -30,12 +30,11 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "import pandas as pd\n",
+    "\n",
     "from azure_utils.utilities import text_to_json, get_auth\n",
-    "import logging\n",
-    "from dotenv import set_key, get_key, find_dotenv\n",
+    "from azureml.core.model import Model\n",
     "from azureml.core.workspace import Workspace\n",
-    "from azureml.core.model import Model"
+    "from dotenv import get_key, find_dotenv"
    ]
   },
   {
