--- a/notebooks/06_SpeedTestWebApp.ipynb
+++ b/notebooks/06_SpeedTestWebApp.ipynb
@@ -20,15 +20,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from timeit import default_timer\n",
-    "import pandas as pd\n",
     "\n",
+    "from urllib.parse import urlparse\n",
+    "\n",
+    "from azure_utils.utilities import get_auth\n",
     "from azureml.core.webservice import AksWebservice\n",
     "from azureml.core.workspace import Workspace\n",
-    "from dotenv import get_key, find_dotenv\n",
-    "from utilities import get_auth\n",
-    "from urllib.parse import urlparse\n"
+    "from dotenv import get_key, find_dotenv\n"
    ]
   },
   {
@@ -449,6 +447,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.5"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
