--- a/notebooks/07_RealTimeScoring.ipynb
+++ b/notebooks/07_RealTimeScoring.ipynb
@@ -78,7 +78,7 @@
     "from azureml.core.webservice import AksWebservice\n",
     "from azureml.core.workspace import Workspace\n",
     "from dotenv import get_key, find_dotenv\n",
-    "from utilities import read_questions, text_to_json, get_auth\n"
+    "from azure_utils.utilities import read_questions, text_to_json, get_auth\n"
    ]
   },
   {
@@ -727,6 +727,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.2"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
