--- a/notebooks/08_TearDown.ipynb
+++ b/notebooks/08_TearDown.ipynb
@@ -29,7 +29,7 @@
     "from azureml.core.webservice import AksWebservice\n",
     "from azureml.core.workspace import Workspace\n",
     "from dotenv import get_key, find_dotenv\n",
-    "from utilities import get_auth\n"
+    "from azure_utils.utilities import get_auth\n"
    ]
   },
   {
@@ -228,6 +228,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.2"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
