--- a/notebooks/06_SpeedTestWebApp.ipynb
+++ b/notebooks/06_SpeedTestWebApp.ipynb
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's retrive the web service."
+    "Let's retrieve the web service."
    ]
   },
   {
