--- a/notebooks/01_DataPrep.ipynb
+++ b/notebooks/01_DataPrep.ipynb
@@ -30,8 +30,9 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "import pandas as pd\n",
-    "from azure_utils.utilities import read_csv_gz, clean_text, round_sample_strat, random_merge"
+    "from azure_utils.utilities import read_csv_gz, clean_text, round_sample_strat"
    ]
   },
   {
