--- a/notebooks/00_AMLConfiguration.ipynb
+++ b/notebooks/00_AMLConfiguration.ipynb
@@ -33,24 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AML SDK Version: 1.0.57\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
     "import azureml.core\n",
     "from azure_utils.machine_learning.utils import load_configuration, get_or_create_workspace\n",
     "\n",
@@ -73,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -86,11 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": [
+     "parameters"
+    ]
    },
    "outputs": [],
    "source": [
@@ -125,15 +118,7 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UserWarning: The resource group doesn't exist or was not provided. AzureML SDK is creating a resource group=dciborow-mlrts-test in location=westus using subscription=0ca618d2-22a8-413a-96d0-0f1b531129c3.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ws = get_or_create_workspace(workspace_name, subscription_id, resource_group, workspace_region)\n",
     "ws_json = ws.get_details()"
@@ -141,6 +126,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python [conda env:az-ml-realtime-score] *",
    "language": "python",
