--- a/notebooks/01_DataPrep.ipynb
+++ b/notebooks/01_DataPrep.ipynb
@@ -32,7 +32,7 @@
     "import os\n",
     "\n",
     "import pandas as pd\n",
-    "from azure_utils.utilities import read_csv_gz, clean_text, round_sample_strat"
+    "from azure_utils.utilities import read_csv_gz, clean_text, round_sample_strat, random_merge"
    ]
   },
   {
@@ -503,7 +503,7 @@
    "outputs": [],
    "source": [
     "# Use AnswerId to pair each training dupe with its matching question and also with N-1 questions not its match.\n",
-    "%time balanced_pairs_train = random_merge(dupes_train, questions, N=match)"
+    "balanced_pairs_train = random_merge(dupes_train, questions, N=match)"
    ]
   },
   {
@@ -568,7 +568,7 @@
    "outputs": [],
    "source": [
     "# Use AnswerId to pair each testing dupe with all questions.\n",
-    "%time balanced_pairs_test = random_merge(dupes_test, questions, N=questions.shape[0])"
+    "balanced_pairs_test = random_merge(dupes_test, questions, N=questions.shape[0])"
    ]
   },
   {
