--- a/notebooks/02_TrainOnLocal.ipynb
+++ b/notebooks/02_TrainOnLocal.ipynb
@@ -268,32 +268,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#%%time\n",
-    "#run.wait_for_completion(show_output=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#run.wait_for_completion(show_output=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "Let's check that the model is now available in your workspace."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#run.get_file_names()"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Let's retrieve the accuracy of the model from run logs by querying the run metrics."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's retrive the accuarcy of the model from run logs by querying the run metrics."
+    "#run.get_metrics()"
    ]
   },
   {
@@ -301,23 +314,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#run.get_metrics()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### System-managed environment\n",
     "You can also ask the system to build a new conda environment and execute your scripts in it. The environment is built once and will be reused in subsequent executions as long as the conda dependencies remain unchanged. "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "run_config_system_managed = RunConfiguration()\n",
     "run_config_system_managed.environment.python.user_managed_dependencies = False\n",
@@ -325,10 +329,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Let's specifiy the conda and pip dependencies."
+    "Let's specify the conda and pip dependencies."
    ]
   },
   {
@@ -343,28 +349,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "cd = CondaDependencies.create(conda_packages=conda_pack, pip_packages=requirements)\n",
     "run_config_system_managed.environment.python.conda_dependencies = cd"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "#### Submit script to run in the system-managed environment\n",
     "A new conda environment is built based on the conda dependencies object. If you are running this for the first time,  this might take up to 5 minutes. But this conda environment is reused so long as you don't change the conda dependencies."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "src = ScriptRunConfig(\n",
     "    source_directory=\"./scripts\",\n",
@@ -376,10 +380,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Get run history details"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Get run history details"
+    "run"
    ]
   },
   {
@@ -387,13 +400,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "run"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Block and wait till run finishes."
    ]
@@ -418,17 +424,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "run.get_metrics()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### Docker-based execution\n",
     "**IMPORTANT**: You must have Docker engine installed locally in order to use this execution mode. If your kernel is already running in a Docker container, such as **Azure Notebooks**, this mode will **NOT** work.\n",
@@ -437,10 +443,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "run_config_docker = RunConfiguration()\n",
     "run_config_docker.environment.python.user_managed_dependencies = False\n",
@@ -454,17 +458,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Here, we map the local `data_folder` that includes the training and testing data to the docker container using `-v` flag."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "host_dir = os.path.abspath(\"./data_folder\")\n",
     "container_dir = \"/data_folder\"\n",
@@ -472,8 +476,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "This time the run will use the mapped `data_folder` inside the docker container to find the data files."
    ]
@@ -526,17 +532,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " run = exp.submit(src)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Get run history details\n",
-    "run"
+    "run = exp.submit(src)"
    ]
   },
   {
