--- a/notebooks/03_DevelopScoringScript.ipynb
+++ b/notebooks/03_DevelopScoringScript.ipynb
@@ -30,6 +30,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "import logging as lg\n",
     "\n",
     "from azure_utils.utilities import text_to_json, get_auth\n",
     "from azureml.core.model import Model\n",
@@ -126,12 +127,57 @@
     "\n",
     "import pandas as pd\n",
     "import json\n",
-    "from duplicate_model import DuplicateModel\n",
-    "import logging\n",
+    "import logging as lg\n",
     "import timeit as t\n",
     "\n",
+    "\n",
+    "import pandas as pd\n",
+    "from sklearn.externals import joblib\n",
+    "\n",
+    "\n",
+    "class DuplicateModel(object):\n",
+    "\n",
+    "    questions_cols = ['Id', 'AnswerId', 'Text']\n",
+    "    dup_col = 'Text_x'\n",
+    "    id_col = 'Id_y'\n",
+    "    answerId_col = 'AnswerId_y'\n",
+    "    orig_col = 'Text_y'\n",
+    "    feature_cols = [dup_col, orig_col]\n",
+    "    probabilities_col = 'probabilities'\n",
+    "\n",
+    "    def __init__(self, model_path, questions_path):\n",
+    "        self.model_path = model_path\n",
+    "        self.questions_path = questions_path\n",
+    "        self.model = joblib.load(model_path)\n",
+    "        self.questions = pd.read_csv(questions_path, sep='\\t',\n",
+    "                                     encoding='latin1')\n",
+    "        self.questions = self.questions[self.questions_cols]\n",
+    "        self.questions.columns = [\n",
+    "            self.id_col, self.answerId_col, self.orig_col]\n",
+    "\n",
+    "    def score(self, Text):\n",
+    "        # Create a scoring dataframe.\n",
+    "        test = self.questions.copy()\n",
+    "        test[self.dup_col] = Text\n",
+    "        test_X = test[self.feature_cols]\n",
+    "\n",
+    "        # Score the text.\n",
+    "        test[self.probabilities_col] = self.model.predict_proba(\n",
+    "            test_X)[:, 1]\n",
+    "\n",
+    "        # Order the data by descending probability.\n",
+    "        test.sort_values(by=self.probabilities_col, ascending=False,\n",
+    "                         inplace=True)\n",
+    "\n",
+    "        # Extract the original question ids, answer ids, and probabilities.\n",
+    "        scores = test[[self.id_col, self.answerId_col, self.probabilities_col]]\n",
+    "        pairs = [x[1:] for x in scores.itertuples()]\n",
+    "\n",
+    "        # Return the result.\n",
+    "        return pairs\n",
+    "\n",
     "def init():\n",
-    "    logger = logging.getLogger(\"scoring_script\")\n",
+    "    logger = lg.getLogger(\"scoring_script\")\n",
     "    global model\n",
     "    model_path = \"model.pkl\"\n",
     "    questions_path = \"./data_folder/questions.tsv\"\n",
@@ -143,7 +189,7 @@
     "\n",
     "\n",
     "def run(body):\n",
-    "    logger = logging.getLogger(\"scoring_script\")\n",
+    "    logger = lg.getLogger(\"scoring_script\")\n",
     "    json_load_text = json.loads(body)\n",
     "    text_to_score = json_load_text[\"input\"]\n",
     "    start = t.default_timer()\n",
@@ -166,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logging.basicConfig(level=logging.DEBUG)"
+    "lg.basicConfig(level=lg.DEBUG)"
    ]
   },
   {
